automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -8,5 +8,8 @@ body {
 
 header {
   height: 100px;
-    border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+}
+header nav {
+  float: right;
 }
